# DiffSimGen

./: README.md  diffsimgen_test.ipynb  example_diffsimgen.ipynb  pyproject.toml
datasets/: tutorial_dwi.bval  tutorial_dwi.bvec
diffsimgen/: __init__.py  diffsimrun.py
diffsimgen/scripts/: generate_parameter_array.py  generate_training_data.py  helper_functions.py  models.py  simulate_signal.py
resources/: NODDI_watson_parameter_range.json  ball_parameter_range.json  ball_stick_parameter_range.json  stick_parameter_range.json  zeppelin_parameter_range.json
