[tool.poetry]
name = "diffsimgen"
version = "0.1.0"
description = ""
authors = ["Bradley-Karat <bkarat@uwo.ca>"]
readme = "README.md"
packages = [{include = "diffsimgen"}]

[tool.poetry.scripts]
diffsimgen = "diffsimgen.run:main"

[tool.poetry.dependencies]
python = "^3.7"
numpy = ">=1.21.0"
nibabel = ">=3.2.1"
#dmipy = ">=1.0.5"
dmipy = { git = "https://github.com/Bradley-Karat/dmipy.git" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
